<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/decode_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecodeActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/sms_input"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/paste_encoded_text"
                android:background="#784848"
                android:gravity="top"
                android:layout_marginTop="90dp"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="10dp" />

            <Button
                android:id="@+id/paste_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paste"
                android:layout_marginTop="8dp"
                android:backgroundTint="#888095"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/decode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decode"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_image"
                android:layout_marginTop="12dp"
                android:backgroundTint="#98AF99"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/btn_switch_to_encoder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_to_encoder"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_button" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/decoded_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/decoded_image" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>