<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#6A6868"
                android:background="@drawable/image_border"
                android:layout_marginTop="90dp"
                android:contentDescription="@string/selected_image" />

            <Button
                android:id="@+id/choose_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:backgroundTint="#03DAC5"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/encode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#03DAC5"
                android:layout_marginTop="12dp"
                android:text="@string/encode"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/copy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:layout_marginTop="12dp"
                android:backgroundTint="#FFBB86FC"
                android:background="@drawable/rounded_button" />

            <Button
                android:id="@+id/btn_switch_to_decoder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_to_decoder"
                android:layout_marginTop="12dp"
                android:backgroundTint="#3700B3"
                android:background="@drawable/rounded_button" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sms_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Encoded message will appear here"
                android:layout_marginTop="16dp"

                android:textSize="14sp"
                android:textIsSelectable="true"
                android:padding="12dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>